# tcpCommunication

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md
maincpp/: BUILD.bazel  TCPCommunication.cpp  TCPCommunication.hpp  client_main.cpp  server_main.cpp
