load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# this is for configuaring clang-tidy
# filegroup(
#       name = "clang_tidy_config",
#       srcs = [".clang-tidy"],
#       visibility = ["//visibility:public"],
#)



refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "external",
    targets = {
      "//maincpp:all": "",
    },
)